--- a/print.css
+++ b/print.css
@@ -27,6 +27,7 @@ body {
 	font-size: 14pt;
 	text-align: justify;
 	counter-reset: figcaption;
+	counter-reset: table;
 }
 
 a { 
@@ -124,7 +125,7 @@ dl dd:last-child, dl:last-child {
 
 
 
-/* Figure numbering             */
+/* Figure/table auto-numbering  */
 /* ===========================  */
 
 figcaption:before {
@@ -132,6 +133,15 @@ content: "Figure "  counter(figcaption) ": " attr(title);
 counter-increment: figcaption;
 font-weight: bold;
 }
+
+caption:before {
+content: "Table "  counter(table) ": " attr(title);
+counter-increment: table;
+font-weight: bold;
+
+}
+
+
 
 pre {
     white-space: pre-wrap;
@@ -193,6 +203,8 @@ caption {
     font-weight: bold;
     margin-bottom: 20px;
 }
+
+
 figure {
     display: block;
     text-align: center;
@@ -220,6 +232,7 @@ mark {
 .footnote {
     font-size: 0.8em;
     vertical-align: super;
+    color: black;
 }
 
 sup {
@@ -324,26 +337,29 @@ sup {
 	
 body {
 	overflow: auto;
-	padding-left: 5%;
-	padding-right: 5%;
 	text-align: justify;
 	font-family: "Times New Roman", "Times", serif;
 	font-size: 11pt;
 	line-height: 15pt;
-	
+    color: black;
 	display: block;
     page: main;
     counter-reset: page 1;
-    color: black;
 	}
-	
+	a { 
+    color: black;
+    text-decoration:none;
+	}
+	h1 {
+	  string-set: header content();
+	}
     h1, h2 {     
 	    line-height:1.2em;
 	    margin-top:40px;
 	    padding-bottom: 5px;
         font-family: "Helvetica", "Arial", sans serif;     
         text-align: left;
-        font-weight: 100;
+        font-weight: bold;
     }
     
     h1:first-child {
@@ -367,8 +383,9 @@ body {
 	}
 
     h3, h4, h5, h6, h7 {
-        font-family: "Helvetica Neue", "Arial", sans serif;     
+        font-family: "Helvetica", "Arial", sans serif;     
         text-align: left;
+        font-weight: normal;
 	}
 	
     pre, code {
@@ -382,8 +399,12 @@ body {
 		margin-top:40%;
     }
 
+	sup {
+		color:black;
+	}
     .footnotes {
         page-break-before: always;
+        color: black;
     }
     .page-break {display:block; page-break-before: always; }
 
@@ -394,9 +415,34 @@ body {
 }
 
 @page {
-	@top { content: string(chapter-title) } 
-    @bottom { content: counter(page) }
-    size:8.5in 11in; 
-    margin: 2cm;
+       size:  597pt 845pt;
+       margin-top:   8mm; margin-bottom: 14mm;
+       margin-left: 33mm; margin-right:  33mm;
+	   margin-top: 10%;
+       margin-bottom: 10%;
 }
 
+
+/* Headers and footers                            */
+/* ---------------------------------------------- */
+
+
+@page :left {
+  @top-left {
+/*     content: string(title, odd); */
+  }
+}
+
+@page {
+  @bottom { 
+     content: counter(page)
+    	}
+	}
+
+
+
+@page :right {
+  @top-right {
+    content: string(header, first); 
+  }
+}
